# creative-agent

./: .env.example  .gitignore  README.md  README_CODE_AGENT.md  cli_turn_agent.py  creative_agent_prompt.md  demo_code_agent.py  demo_optimized_turn.py  demo_turn_agent.py  demo_turn_simple.py  design.md  main.py  main_code_agent.py  main_simple.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  run_tests.py  test_compaction_quick.py
config/: compaction.yaml
examples/: compaction_example.py
src/agent/: code_agent.py  planner.py  simple_controller.py  simple_dispatcher.py  turn.py  turn_based_agent.py
src/cli/: main.py
src/core/: __init__.py  agent_turn.py  codex_engine.py  config.py  ctv_engine.py  event_handler.py  model_client.py  protocol.py  session.py
src/core/agents/: __init__.py  info.py  prompts.py  registry.py  utils.py
src/prompt/: README  available_tools.txt  claude-code-system-prompt-zh.txt  claude-code-system-prompt.txt  ctv-claude-code-system-prompt-zh.txt  opencode-system-prompt-codex-zh.txt  opencode-system-prompt-codex.txt
src/tools/: __init__.py  base_tool.py  bash_tool.py  edit_tool.py  executor.py  file_tool.py  file_tools.py  glob_tool.py  grep_tool.py  list_tool.py  patch_applier.py  registry.py  sandbox.py  task_manager.py  task_prompts.py  task_tool.py  todo.py
src/utils/: logger.py
tests/cli/: test_cli_resume.py
tests/core/: __init__.py  test_agent_turn.py  test_hooks.py  test_memory_integration.py  test_model_client.py  test_path_guard.py  test_session_compaction.py
tests/tools/: test_bash.py  test_edit_tool.py  test_file_tools.py  test_glob_tool.py  test_grep_tool.py  test_list_tool.py  test_multi_edit_tool.py  test_registry.py  test_task_integration.py  test_task_interrupt_cleanup.py  test_task_manager.py  test_task_tool.py  test_todo.py  test_web_tools.py
(+71 files in other folders)
